; ModuleID = '/home/carl/AnghaBench/linux/fs/quota/extr_dquot.c_dqput_all.c'
source_filename = "/home/carl/AnghaBench/linux/fs/quota/extr_dquot.c_dqput_all.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dquot = type { i32 }

@MAXQUOTAS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.dquot**)* @dqput_all to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @dqput_all(%struct.dquot** %0) #0 {
  %2 = alloca %struct.dquot**, align 8
  %3 = alloca i32, align 4
  store %struct.dquot** %0, %struct.dquot*** %2, align 8
  store i32 0, i32* %3, align 4
  br label %4

4:                                                ; preds = %15, %1
  %5 = load i32, i32* %3, align 4
  %6 = load i32, i32* @MAXQUOTAS, align 4
  %7 = icmp ult i32 %5, %6
  br i1 %7, label %8, label %18

8:                                                ; preds = %4
  %9 = load %struct.dquot**, %struct.dquot*** %2, align 8
  %10 = load i32, i32* %3, align 4
  %11 = zext i32 %10 to i64
  %12 = getelementptr inbounds %struct.dquot*, %struct.dquot** %9, i64 %11
  %13 = load %struct.dquot*, %struct.dquot** %12, align 8
  %14 = call i32 @dqput(%struct.dquot* %13)
  br label %15

15:                                               ; preds = %8
  %16 = load i32, i32* %3, align 4
  %17 = add i32 %16, 1
  store i32 %17, i32* %3, align 4
  br label %4

18:                                               ; preds = %4
  ret void
}

declare dso_local i32 @dqput(%struct.dquot*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
